[package]
name = "nus_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = "1"
futures = "0.3"
crossterm = "0.27"
tui = "0.19"
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
